# ambientfps

./: .gitignore  Cargo.toml  Dockerfile  README.md  ambient.toml  dambient.bash  dbuild.bash  drun.bash
.github/workflows/: rust.yml
assets/: landscape.glb  pipeline.toml
my_mod/: Cargo.toml  ambient.toml
my_mod/src/: client.rs  server.rs
src/: client.rs  server.rs
